# Discord-Bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
poetry_scripts/: run_audit.py
src/: config_example.json  main.py  utils.py
src/cogs/: fun.py  invite_check.py  leave_message.py  media_rate.py  message_logging.py  suggestions.py  voice_channel_hoist.py
